<resources>
    <string name="app_name">Mộc Sneaker</string>
    <string name="title_activity_main2">Mộc Sneaker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Quản lý</string>
    <string name="title_notifications">Cá nhân</string>
    <string name="ng_k">Đăng ký</string>
    <string name="thuong_hieu">Thương hiệu: DinCox | Loại: DinCox</string>
    <string name="hot_line">Hotline hỗ trợ</string>
    <string name="tt_sanpham">Thông tin sản phẩm</string>
    <string name="vertify_otp">Mã xác thực sẽ được gửi qua số điện thoại khách hàng đăng ký</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="ps1">Để giữ an toàn cho tài khoản của bạn, vui lòng xác minh danh tính bằng cách nhập mật khẩu</string>
    <string name="mk_hientai">Mật khẩu hiện tại</string>
    <string name="tt_taikhoan">Cảm ơn quý khách đã tin tưởng và sử dụng ứng dụng bán hàng của Mộc Sneaker</string>
    <string name="gh_diachinhan">Địa chỉ nhận hàng</string>
    <string name="gh_chonsan">Chọn sản phẩm muốn sửa</string>
    <string name="qlnh">Lập danh sách hàng cần nhập</string>
    <string name="themdonnhap">Thêm mặt hàng cần nhập</string>
    <string name="timKiemNhap">Tìm sản phẩm muốn nhập</string>
    <string name="xacNhanDonNhap">Xác nhận lập đơn nhập hàng</string>
    <string name="soLuongIn">Số lượng hiện có trong kho</string>
    <string name="spbannhieu">Sản phẩm bán được nhiều nhất</string>
    <string name="spbanIt">Sản phẩm bán được ít nhất</string>
    <string name="diaChiCH">Số 82, đường Tây Tựu, Quận Bắc Từ Liêm, Hà Nội</string>
    <string name="thongTin">Mộc Sneaker chuyên giày thể thao (Đại lý Cox Shoes Hà Nội)
        \nĐịa chỉ: 82 Đường Tây Tựu, Bắc Từ Liêm, Hà Nội
    \nHotline: 034 601 7373\nEmail: mocsneaker@gmail.com</string>
    <string name="maqr">Mã QR sản phẩm vừa tạo</string>
</resources>
