<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainQLThemDonNhapHnag">

    <TextView
        android:id="@+id/txt_timkiemNhap"
        android:textColor="#000"
        android:textAllCaps="true"
        android:text="@string/timKiemNhap"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/linear_qrcode"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:weightSum="3.4"
        app:layout_constraintTop_toBottomOf="@+id/txt_timkiemNhap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_themNhapHang"
            android:paddingLeft="8dp"
            android:hint="Tên sản phẩm"
            android:background="@drawable/customedtsearch"
            android:layout_weight="2"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <TextView
            android:textAlignment="center"
            android:textColor="#000"
            android:text="Hoặc"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="@drawable/custombutton"
            android:text="Quét QR Code"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:id="@+id/recycle_timKiem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_qrcode"
        android:layout_height="200dp"/>
    <TextView
        android:id="@+id/txt_1"
        android:textColor="#000"
        android:textAllCaps="true"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/themdonnhap"
        app:layout_constraintTop_toBottomOf="@+id/recycle_timKiem"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_1"
        android:id="@+id/recycle_danhsachNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:weightSum="2"
        android:id="@+id/linear_themdonNhap"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recycle_danhsachNhap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            android:id="@+id/txt_soLuongNhap"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textAlignment="center"
            android:id="@+id/txt_tienNhap"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_xacNhanLap"
        android:textColor="#fff"
        android:text="@string/xacNhanDonNhap"
        android:background="@drawable/custombutton"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

</android.support.constraint.ConstraintLayout>