<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainProductDetail">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/recycle_prdetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#0333AC"
                android:textStyle="bold"
                android:id="@+id/txt_tenSPDetail"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycle_prdetail"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/txt_thuonghieuDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_tenSPDetail"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/thuong_hieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="#FF0000"
                android:textSize="15sp"
                android:id="@+id/txt_giaDetail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_thuonghieuDetail"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="Kích cỡ"
                android:id="@+id/txt_kichcoDeTail"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_giaDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/radiogroup"
                android:orientation="horizontal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_kichcoDeTail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:textSize="15sp"
                    android:text="39"
                    android:id="@+id/radiobtn_detail1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:textSize="15sp"
                    android:text="40"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/radiobtn_detail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:textSize="15sp"
                    android:text="41"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/radiobtn_detail3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:textSize="15sp"
                    android:text="42"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/radiobtn_detail4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:textSize="15sp"
                    android:text="43"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/radiobtn_detail5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <TextView
                android:textColor="#000"
                android:textStyle="bold"
                android:id="@+id/txt_hotline"
                android:text="@string/hot_line"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAllCaps="false"
                android:text="Thêm vào giỏ hàng"
                android:layout_marginTop="8dp"
                android:id="@+id/btn_prdetailMua"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_hotline"
                android:textColor="#FFFFFF"
                app:layout_constraintRight_toLeftOf="@+id/btn_prdetailMua2"
                android:background="@drawable/custombtndki"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <Button
                android:textAllCaps="false"
                android:layout_marginTop="8dp"
                android:id="@+id/btn_prdetailMua2"
                app:layout_constraintLeft_toRightOf="@+id/btn_prdetailMua"
                app:layout_constraintTop_toBottomOf="@+id/txt_hotline"
                android:textColor="#FFFFFF"
                android:text="Mua ngay"
                android:background="@drawable/custombtndki"
                android:layout_width="150dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#000"
                android:padding="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="15sp"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_prdetailMua"
                android:text="@string/tt_sanpham"
                android:layout_width="match_parent"
                android:id="@+id/txt_ttsanpham"
                android:layout_height="wrap_content"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>